--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 1</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Start developing here</h1>
+    <header>
+      <div class="header">
+        <a href="#" type="button">Web<b>Studio</b></a>
+        <nav>
+          <ul>
+            <li class="1"><a href="#">Студія</a></li>
+            <li class="b"><a href="#">Портфоліо</a></li>
+            <li class="c"><a href="#">Контакти</a></li>
+          </ul>
+        </nav>
+        <a href="#">info@devstudio.com</a>
+        <p>+38 096 111 11 11</p>
+      </div>
+    </header>
+    <main>
+      <div>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <input type="button" value="Замовити послугу" />
+      </div>
+      <section>
+        <table>
+          <tr>
+            <td><b>УВАГА ДО ДЕТАЛЕЙ</b></td>
+            <td><b>ПУНКТУАЛЬНІСТЬ</b></td>
+            <td><b>ПЛАНУВАННЯ</b></td>
+            <td><b>СУЧАСНІ ТЕХНОЛОГІЇ</b></td>
+          </tr>
+          <tr>
+            <td>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </td>
+            <td>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </td>
+            <td>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </td>
+            <td>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </td>
+          </tr>
+        </table>
+      </section>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <img
+          src="Images/img_1.jpg"
+          alt="написання коду"
+          width="370"
+          height="294"
+        />
+        <img
+          src="Images/img_2.jpg"
+          alt="адаптація під екран телефону"
+          width="370"
+          height="294"
+        />
+        <img
+          src="Images/img_3.jpg"
+          alt="палітра кольорів"
+          width="370"
+          height="294"
+        />
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <div class="ihor">
+          <img
+            src="Images/img_4.jpg"
+            alt="Product Designer"
+            width="270"
+            height="260"
+          />
+          <h3>Ігор Дем'яненко</h3>
+          <p>Product Designer</p>
+        </div>
+        <div class="ihor">
+          <img
+            src="Images/img_5.jpg"
+            alt="Frontend Developer"
+            width="270"
+            height="260"
+          />
+          <h3>Ольга Рєпіна</h3>
+          <p>Frontend Developer</p>
+        </div>
+        <div class="ihor">
+          <img
+            src="Images/img_6.jpg"
+            alt="Marketing"
+            width="270"
+            height="260"
+          />
+          <h3>Микола Тарасов</h3>
+          <p>Marketing</p>
+        </div>
+        <div class="ihor">
+          <img
+            src="Images/img_7.jpg"
+            alt="UI Designer"
+            width="270"
+            height="260"
+          />
+          <h3>Михайло Єрмаков</h3>
+          <p>UI Designer</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <address>
+        <a href="#" type="button">Web<b>Studio</b></a
+        ><br />
+        м. Київ, пр-т Лесі Українки, 26<br />
+        info@devstudio.com<br />
+        +38 096 111 11 11
+      </address>
+    </footer>
   </body>
 </html>
