fixes after review

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <div class="header">
+    <header class="header">
+      <div>
         <a href="#" type="button">Web<b>Studio</b></a>
         <nav>
           <ul>
@@ -24,34 +24,36 @@
     <main>
       <div>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <input type="button" value="Замовити послугу" />
+        <button name="button">Замовити послугу</button>
       </div>
       <section>
-        <table>
-          <tr>
-            <td><b>УВАГА ДО ДЕТАЛЕЙ</b></td>
-            <td><b>ПУНКТУАЛЬНІСТЬ</b></td>
-            <td><b>ПЛАНУВАННЯ</b></td>
-            <td><b>СУЧАСНІ ТЕХНОЛОГІЇ</b></td>
-          </tr>
-          <tr>
-            <td>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </td>
-            <td>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </td>
-            <td>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </td>
-            <td>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </td>
-          </tr>
-        </table>
+        <ul>
+          <li><b>УВАГА ДО ДЕТАЛЕЙ</b></li>
+          <li>
+            Ідейні міркування, і навіть початок повсякденної роботи з формування
+            позиції.
+          </li>
+        </ul>
+        <ul>
+          <li><b>ПУНКТУАЛЬНІСТЬ</b></li>
+          <li>
+            Завдання організації, особливо рамки і місце навчання кадрів тягне у
+            себе.
+          </li>
+        </ul>
+        <ul>
+          <li><b>ПЛАНУВАННЯ</b></li>
+          <li>
+            Так само консультація з широким активом значною мірою зумовлює.
+          </li>
+        </ul>
+        <ul>
+          <li><b>СУЧАСНІ ТЕХНОЛОГІЇ</b></li>
+          <li>
+            Значимість цих проблем настільки очевидна, що реалізація планових
+            завдань.
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Чим ми займаємося</h2>
@@ -76,46 +78,54 @@
       </section>
       <section>
         <h2>Наша команда</h2>
-        <div class="ihor">
-          <img
-            src="Images/img_4.jpg"
-            alt="Product Designer"
-            width="270"
-            height="260"
-          />
-          <h3>Ігор Дем'яненко</h3>
-          <p>Product Designer</p>
-        </div>
-        <div class="ihor">
-          <img
-            src="Images/img_5.jpg"
-            alt="Frontend Developer"
-            width="270"
-            height="260"
-          />
-          <h3>Ольга Рєпіна</h3>
-          <p>Frontend Developer</p>
-        </div>
-        <div class="ihor">
-          <img
-            src="Images/img_6.jpg"
-            alt="Marketing"
-            width="270"
-            height="260"
-          />
-          <h3>Микола Тарасов</h3>
-          <p>Marketing</p>
-        </div>
-        <div class="ihor">
-          <img
-            src="Images/img_7.jpg"
-            alt="UI Designer"
-            width="270"
-            height="260"
-          />
-          <h3>Михайло Єрмаков</h3>
-          <p>UI Designer</p>
-        </div>
+        <ul>
+          <li>
+            <img
+              src="Images/img_4.jpg"
+              alt="Product Designer"
+              width="270"
+              height="260"
+            />
+          </li>
+          <li><b>Ігор Дем'яненко</b></li>
+          <li>Product Designer</li>
+        </ul>
+        <ul>
+          <li>
+            <img
+              src="Images/img_5.jpg"
+              alt="Product Designer"
+              width="270"
+              height="260"
+            />
+          </li>
+          <li><b>Ольга Рєпіна</b></li>
+          <li>Frontend Developer</li>
+        </ul>
+        <ul>
+          <li>
+            <img
+              src="Images/img_6.jpg"
+              alt="Product Designer"
+              width="270"
+              height="260"
+            />
+          </li>
+          <li><b>Микола Тарасов</b></li>
+          <li>Marketing</li>
+        </ul>
+        <ul>
+          <li>
+            <img
+              src="Images/img_7.jpg"
+              alt="Product Designer"
+              width="270"
+              height="260"
+            />
+          </li>
+          <li><b>Михайло Єрмаков</b></li>
+          <li>UI Designer</li>
+        </ul>
       </section>
     </main>
     <footer>
