--- a/index.html
+++ b/index.html
@@ -12,46 +12,56 @@
         <a href="#">Web<b>Studio</b></a>
         <nav>
           <ul>
-            <li class="1"><a href="#">Студія</a></li>
-            <li class="b"><a href="#">Портфоліо</a></li>
-            <li class="c"><a href="#">Контакти</a></li>
+            <li>
+              <a href="#">Студія</a>
+            </li>
+            <li>
+              <a href="#">Портфоліо</a>
+            </li>
+            <li>
+              <a href="#">Контакти</a>
+            </li>
           </ul>
         </nav>
         <a href="#">info@devstudio.com</a>
-        <p>+38 096 111 11 11</p>
+        <a>+38 096 111 11 11</a>
       </div>
     </header>
     <main>
-      <div>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button name="button">Замовити послугу</button>
-      </div>
+      <section>
+        <div>
+          <h1>Ефективні рішення для вашого бізнесу</h1>
+          <button name="button">Замовити послугу</button>
+        </div>
+      </section>
       <section>
         <ul>
-          <li><b>УВАГА ДО ДЕТАЛЕЙ</b></li>
           <li>
-            Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
           </li>
-        </ul>
-        <ul>
-          <li><b>ПУНКТУАЛЬНІСТЬ</b></li>
           <li>
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
           </li>
-        </ul>
-        <ul>
-          <li><b>ПЛАНУВАННЯ</b></li>
           <li>
-            Так само консультація з широким активом значною мірою зумовлює.
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
-        </ul>
-        <ul>
-          <li><b>СУЧАСНІ ТЕХНОЛОГІЇ</b></li>
           <li>
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
           </li>
         </ul>
       </section>
@@ -135,12 +145,23 @@
       </section>
     </main>
     <footer>
+      <a href="#">
+        Web<b>Studio</b>
+      </a>
       <address>
-        <a href="#">Web<b>Studio</b></a
-        ><br />
-        м. Київ, пр-т Лесі Українки, 26<br />
-        info@devstudio.com<br />
-        +38 096 111 11 11
+        <ul>
+          <li>
+            <a href="#">м. Київ, пр-т Лесі Українки, 26</a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">
+              info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
