--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 1</title>
   </head>
+
   <body>
     <h1>Start developing here</h1>
+    <header>
+      <a href="#">
+        WebStudio
+      </a>
+
+      <nav>
+        <ul>
+          <li>
+            <a href=""></a>
+          </li>
+          <li>
+            <a href=""></a>
+          </li>
+          <li>
+            <a href=""></a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="contacts">
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
+
+      
+
+    </header>
+
+    <main></main>
+
+    <footer>
+
+    </footer>
   </body>
+
 </html>
