--- a/index.html
+++ b/index.html
@@ -1,47 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework 1</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Homework 1</title>
+</head>
 
-  <body>
-    <h1>Start developing here</h1>
-    <header>
-      <a href="#">
-        WebStudio
-      </a>
+<body>
+  <header>
+    <a href="#">Головна</a>
+    <!--Мелкая кнопка-ссылка над логотипом сайта-->
+    <a href="#">
+      WebStudio
+    </a>
+    <div class="contacts">
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </div>
 
-      <nav>
-        <ul>
-          <li>
-            <a href=""></a>
-          </li>
-          <li>
-            <a href=""></a>
-          </li>
-          <li>
-            <a href=""></a>
-          </li>
-        </ul>
-      </nav>
+    <nav>
+      <ul>
+        <li>
+          <a href="#">Студія</a>
+        </li>
+        <li>
+          <a href="#">Портфоліо</a>
+        </li>
+        <li>
+          <a href="#">Контакти</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-      <div class="contacts">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+  <main>
+    <section>
+      <h1>
+        ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ
+      </h1>
+      <a href="#">Замовити послугу</a>
+      <!-- Большая голубая кнопка-->
+    </section>
 
-      
+    <section>
+      <ul>
+        <li>
+          <h3>
+            УВАГА ДО ДЕТАЛЕЙ
+          </h3>
+          <p>
+            Идейні міркування, і навіть початок повсякденної роботи з формування позиції.
+          </p>
+        </li>
+        <li>
+          <h3>
+            ПУНКТУАЛЬНІСТЬ
+          </h3>
+          <p>
+            Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+          </p>
+        </li>
+        <li>
+          <h3>
+            ПЛАНУВАННЯ
+          </h3>
+          <p>
+            Так само консультація з широким активом значною мірою зумовлює.
+          </p>
+        </li>
+        <li>
+          <h3>
+            СУЧАСНІ ТЕХНОЛОГІЇ
+          </h3>
+          <p>
+            Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+          </p>
+        </li>
+      </ul>
+    </section>
 
-    </header>
+    <section>
+      <h2>
+        Чим мі займаємося
+      </h2>
+      <ul>
+        <li>
+          <img src="images/keyboard.jpg" alt="Keyboard">
+        </li>
+        <li>
+          <img src="images/phone.jpg" alt="phone">
+        </li>
+        <li>
+          <img src="images/rpb.jpg" alt="rgb">
+        </li>
+      </ul>
+    </section>
 
-    <main></main>
+    <section>
+      <h2>
+        Наша команда
+      </h2>
+      <ul>
+        <li>
+          <img src="images/Team/Ihor_Demyanenko.jpg" alt="Ігор Дем'яненко">
 
-    <footer>
+          <h3>
+            Ігор Дем'яненко
+          </h3>
+          <p>
+            Product Designer
+          </p>
+        </li>
+        <li>
+          <img src="images/Team/Olga_Repina.jpg" alt="Ольга Рєпіна">
+          <h3>
+            Ольга Рєпіна
+          </h3>
+          <p>
+            Frontend Developer
+          </p>
+        </li>
+        <li>
+          <img src="images/Team/Mykola_Tarasov.jpg" alt="Микола Тарасов">
+          <h3>
+            Микола Тарасов
+          </h3>
+          <p>
+            Marketing
+          </p>
+        </li>
+        <li>
+          <img src="images/Team/Mykhailo Yermakov.jpg" alt="Михайло Ермаков">
+          <h3>
+            Михайло Ермаков
+          </h3>
+          <p>
+            UI Designer
+          </p>
+        </li>
+      </ul>
+    </section>
+  </main>
 
-    </footer>
-  </body>
+  <footer>
+    <a href="#">WebStudio</a>
+
+    <p>
+      м. Кийв, пр-т Лесі Украйнки, 26
+    </p>
+
+    <div class="contacts">
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </div>
+    <!--Скопировал из контактных данных "header".-->
+  </footer>
+</body>
 
 </html>
