--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
       </h2>
       <ul>
         <li>
-          <img src="images/keyboard.jpg" alt="Keyboard">
+          <img src="images/Services/keyboard.jpg" alt="Keyboard">
         </li>
         <li>
-          <img src="images/phone.jpg" alt="phone">
+          <img src="images/Services/phone.jpg" alt="phone">
         </li>
         <li>
-          <img src="images/rpb.jpg" alt="rgb">
+          <img src="images/Services/rpb.jpg" alt="rgb">
         </li>
       </ul>
     </section>
@@ -131,7 +131,7 @@
           </p>
         </li>
         <li>
-          <img src="images/Team/Mykhailo Yermakov.jpg" alt="Михайло Ермаков">
+          <img src="images/Team/Mykhailo_Yermakov.jpg" alt="Михайло Ермаков">
           <h3>
             Михайло Ермаков
           </h3>
