--- a/index.html
+++ b/index.html
@@ -14,24 +14,21 @@
     <a href="#">
       WebStudio
     </a>
+    <ul>
+      <li>
+        <a href="#">Студія</a>
+      </li>
+      <li>
+        <a href="#">Портфоліо</a>
+      </li>
+      <li>
+        <a href="#">Контакти</a>
+      </li>
+    </ul>
     <div class="contacts">
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+380961111111">+38 096 111 11 11</a>
     </div>
-
-    <nav>
-      <ul>
-        <li>
-          <a href="#">Студія</a>
-        </li>
-        <li>
-          <a href="#">Портфоліо</a>
-        </li>
-        <li>
-          <a href="#">Контакти</a>
-        </li>
-      </ul>
-    </nav>
   </header>
 
   <main>
@@ -86,13 +83,13 @@
       </h2>
       <ul>
         <li>
-          <img src="images/Services/keyboard.jpg" alt="Keyboard">
+          <img src="images/Services/keyboard.jpg" alt="Чим мі займаємося">
         </li>
         <li>
-          <img src="images/Services/phone.jpg" alt="phone">
+          <img src="images/Services/phone.jpg" alt="Чим мі займаємося">
         </li>
         <li>
-          <img src="images/Services/rpb.jpg" alt="rgb">
+          <img src="images/Services/rpb.jpg" alt="Чим мі займаємося">
         </li>
       </ul>
     </section>
@@ -144,17 +141,18 @@
   </main>
 
   <footer>
-    <a href="#">WebStudio</a>
+    <address>
+      <a href="#">WebStudio</a>
 
-    <p>
-      м. Кийв, пр-т Лесі Украйнки, 26
-    </p>
+      <p>
+        м. Кийв, пр-т Лесі Украйнки, 26
+      </p>
 
-    <div class="contacts">
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
-    </div>
-    <!--Скопировал из контактных данных "header".-->
+      <div class="contacts">
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
+    </address>
   </footer>
 </body>
 
