--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             />
           </li>
           <li>
-            <img src="./images/feature-2.jpg" alt="Feature" />
+            <img src="./images/features-2.jpg" alt="Feature" />
           </li>
           <li>
             <img src="./images/features-3.jpg" alt="Feature" />
@@ -94,7 +94,7 @@
         <ul>
           <li>
             <img
-              src="./images/team-1__ihor.jpg"
+              src="./images/team-1.jpg"
               alt="Ihor Demyanenko"
               width="270"
             />
